fix alignment with close button in mobile view

--- a/sass/components/_categorical-display.scss
+++ b/sass/components/_categorical-display.scss
@@ -257,6 +257,7 @@
         }
     }
     .cq-mobile-title{
+        padding-top: 0.9em !important;
         border-bottom: none !important;
     }
 }
