--- a/sass/styles/_menu.scss
+++ b/sass/styles/_menu.scss
@@ -147,8 +147,11 @@
 				border-bottom: 1px solid themed('defaultBorder');
 			}
 			padding-top: 0.2em;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			height: 30px;
 			.mobile-title{
-				display: inline-block;
 				font-size: 14px;
 				line-height: 30px;
 				font-weight: 400;
@@ -158,13 +161,8 @@
 				}
 			}
 			.icon-close-menu{
-			    position: relative;
-			    float: right;
-			    top: 3px;
-			    right: 5px;
+			    margin-right: 6px;
 			    cursor: pointer;
-			    height: 30px;
-			    width: 30px;
 			}
 		}
 		.cq-categorical-display{
